# mhwallet

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  publish_local.sh
.circleci/: config.yml  deploy.sh  deploy_win.bat  setup.sh
cfg/: mhwallet_core.h.in  mhwallet_core.in.h
include/minter/: errors.h  frame_io.h  frame_io_apdu.h  hidpp.h  hidpp_base.h  hidpp_device.h  hidpp_device_info.h  nanos_wallet.h
include/minter/hid/: hidapi.h
include/minter/ledger/: errors.h  frame_io.h  hidpp_base.h  hidpp_device_info.h  nanos_wallet.h  utils.h
include/minter/ledger/hid/: hidapi.h
libs/hid/: CMakeLists.txt
libs/hid/hidapi/: hidapi.h
libs/hid/linux/: hid.c
libs/hid/mac/: hid.c
libs/hid/windows/: hid.c
modules/: ConanBuild.cmake  ConanInit.cmake  FindLibUsb.cmake  compiler_flags.cmake
src/: frame_io.cpp  frame_io_apdu.cpp  hidpp_base.cpp  hidpp_device.cpp  hidpp_device_info.cpp  main.cpp  nanos_wallet.cpp  utils.cpp
src/hid/hidtest/: hidtest.cpp
src/hid/libusb/: hid.c
src/hid/linux/: hid.c
src/hid/windows/: hid.c
